CLOSED FIXED40830
REGRESSION(r60958) [Qt] qwebpage::inputMethods auto-test fails
https://bugs.webkit.org/show_bug.cgi?id=40830
Summary REGRESSION(r60958) [Qt] qwebpage::inputMethods auto-test fails
Simon Hausmann
Reported 2010-06-18 05:19:56 PDT
After r60958 the auto-test fails: FAIL! : tst_QWebPage::inputMethods(QWebView) '!(inputMethodHints(view) & Qt::ImhHiddenText)' returned FALSE. () This is because when activating an input element that is not a password field, we forget to unset the ImhHiddenText input method hint.
Attachments
REGRESSION(r60958) [Qt] qwebpage::inputMethods auto-test fails (1.55 KB, patch)
2010-06-18 05:21 PDT, Simon Hausmann
koivisto: review+
Simon Hausmann
Comment 1 2010-06-18 05:21:23 PDT
Created attachment 59098 [details] REGRESSION(r60958) [Qt] qwebpage::inputMethods auto-test fails
Simon Hausmann
Comment 2 2010-06-18 05:24:09 PDT
Simon Hausmann
Comment 3 2010-06-18 05:24:39 PDT
Cherry-picked into qtwebkit-4.6 with commit a13977ce2aba31808a046cddc082a84dc316d78b
Simon Hausmann
Comment 4 2010-06-18 05:53:06 PDT
Revision r61395 cherry-picked into qtwebkit-2.0 with commit f2ee51a394c63d9f1e625d893c572db70bb8191a
Note You need to log in before you can comment on or make changes to this bug.