REGRESSION(r60958) [Qt] qwebpage::inputMethods auto-test fails https://bugs.webkit.org/show_bug.cgi?id=40830

Reviewed by Antti Koivisto.

When activating a regular input method field, always set or unset the ImhHiddenText
input method hint.

* WebCoreSupport/EditorClientQt.cpp:
(WebCore::EditorClientQt::setInputMethodState):

Canonical link: https://commits.webkit.org/52405@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61395 268f45cc-cd09-0410-ab3c-d52691b4dbfc